--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_login">Login</string>
     <string name="login_cancel_text">Login Cancelled</string>
     <string name="login_error_text">There was an while error logging in. Please try again.</string>
+    <string name="notification_action_text">View Profile</string>
 </resources>
